--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div>
-    <%= f.label :title %>
+  <div class="field">
+    <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
 
-  <div>
-    <%= f.label :body %>
+  <div class="field">
+    <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div>
 
-  <div>
+  <div class="field">
     <%= f.submit %>
   </div>
 <% end %>
